fixed close icon not showing

--- a/_sass/_10svg.scss
+++ b/_sass/_10svg.scss
@@ -6,7 +6,8 @@ footer {
 }
 
 .logo,
-.open {
+.open,
+.close {
   fill: $brand_color;
 }
 
